// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`ui/tui visual snapshots awaiting approval frame snapshot (input required) 1`] = `
"● Mission Control  テキスト統計ユーティリティの追加                                      Time 5m 42s
● AWAITING_APPROVAL [███████████████░░░░░░░░░░░░░░░] 2/4 (50%) | WORKER m1-f2                       
╔══════════════════════════════════════════════════════════════════════════════════════════════════╗
║ Overview                                                                                         ║
║ MISSION SUMMARY                                         │ FEATURES                             … ║
║ ● m1-f2 Implement parser and CLI options                │ ● m1 Core                            … ║
║                                                         │  ✓ m1-f1 Read files                  … ║
║ Milestone  m1 Core                                      │ >● m1-f2 Implement parser and CLI opt… ║
║ State      awaiting_approval                            │ ○ m2 Validation                      … ║
║ Activity   Running m1-f2...                             │  ○ m2-f1 Run validations             … ║
║ Progress   2/4 (50%)                                    │                                      … ║
║ Branch     melos/mission/m1-f2                          │ QA CHECKS                            … ║
║                                                         │ Summary: 0/1 passed, 0 failed, 1 pend… ║
║ Expected Behavior                                       │ ○ m1-qa-overview Capture before scree… ║
║   Implement parser and CLI options                      │                                      … ║
║                                                         │ RECENT EVENTS                        … ║
║                                                         │ Approval pending (press y to start)  … ║
║                                                         │ 09:00:00 mission run started         … ║
║                                                         │ 09:00:05 Planning mission...         … ║
║                                                         │ 09:00:10 worker #1 started           … ║
╚══════════════════════════════════════════════════════════════════════════════════════════════════╝







入力待ち  承認待ち: y=承認 / Ctrl+C=中止                                                            
[INPUT] 承認待ち: y=承認 / Ctrl+C=中止                                                              "
`;

exports[`ui/tui visual snapshots initializing frame snapshot 1`] = `
"● Mission Control  テキスト統計ユーティリティの追加                                      Time 0m 00s
● INITIALIZING [░░░░░░░░░░] 0/0 (0%)                                                                
Initializing mission runtime...                                                                     
                                                                                                    
Waiting for first status update from orchestrator.                                                  
This usually appears in a few seconds.                                                              
                                                                                                    
If this does not change:                                                                            
1. Confirm PRD.md exists                                                                            
2. Confirm TASK.json is valid MissionPlan v2                                                        
3. Press Ctrl+C to abort and re-run                                                                 
                                                                                                    
                                                                                                    
                                                                                                    
                                                                                                    
                                                                                                    
                                                                                                    
                                                                                                    
                                                                                                    
                                                                                                    
                                                                                                    
                                                                                                    
                                                                                                    
                                                                                                    
                                                                                                    
                                                                                                    
                                                                                                    
                                                                                                    
Ctrl+C Abort  Waiting for first state update...                                                     
melos> initializing...                                                                              "
`;

exports[`ui/tui visual snapshots narrow terminal snapshot (80x24) 1`] = `
"● Mission Control  テキスト統計ユーティリティの追加                  Time 5m 42s
● RUNNING [███████████████░░░░░░░░░░░░░░░] 2/4 (50%) | WORKER m1-f2             
╔══════════════════════════════════════════════════════════════════════════════╗
║ Overview                                                                     ║
║ MISSION SUMMARY                             │ FEATURES                     … ║
║ ● m1-f2 Implement parser and CLI options    │  ✓ m1-f1 Read files          … ║
║                                             │ >● m1-f2 Implement parser and… ║
║ Milestone  m1 Core                          │ ○ m2 Validation              … ║
║ State      running                          │  ○ m2-f1 Run validations     … ║
║ Activity   Running m1-f2...                 │                              … ║
║ Progress   2/4 (50%)                        │ QA CHECKS                    … ║
║ Branch     melos/mission/m1-f2              │ Summary: 0/1 passed, 0 failed… ║
║                                             │ ○ m1-qa-overview Capture befo… ║
║ Expected Behavior                           │                              … ║
║   Implement parser and CLI options          │ RECENT EVENTS                … ║
║                                             │ Detailed logs are available i… ║
║                                             │ 09:00:00 mission run started … ║
║                                             │ 09:00:05 Planning mission... … ║
║                                             │ 09:00:10 worker #1 started   … ║
╚══════════════════════════════════════════════════════════════════════════════╝


Tab Next  Shift+Tab Prev  F/W/M/D/T View  P Pause  R Resume  Ctrl+G Steer  ↑↓/P…
melos> Running m1-f2...  (Ctrl+G steer)                                         "
`;

exports[`ui/tui visual snapshots overview frame snapshot 1`] = `
"● Mission Control  テキスト統計ユーティリティの追加                                      Time 5m 42s
● RUNNING [███████████████░░░░░░░░░░░░░░░] 2/4 (50%) | WORKER m1-f2                                 
╔══════════════════════════════════════════════════════════════════════════════════════════════════╗
║ Overview                                                                                         ║
║ MISSION SUMMARY                                         │ FEATURES                             … ║
║ ● m1-f2 Implement parser and CLI options                │ ● m1 Core                            … ║
║                                                         │  ✓ m1-f1 Read files                  … ║
║ Milestone  m1 Core                                      │ >● m1-f2 Implement parser and CLI opt… ║
║ State      running                                      │ ○ m2 Validation                      … ║
║ Activity   Running m1-f2...                             │  ○ m2-f1 Run validations             … ║
║ Progress   2/4 (50%)                                    │                                      … ║
║ Branch     melos/mission/m1-f2                          │ QA CHECKS                            … ║
║                                                         │ Summary: 0/1 passed, 0 failed, 1 pend… ║
║ Expected Behavior                                       │ ○ m1-qa-overview Capture before scree… ║
║   Implement parser and CLI options                      │                                      … ║
║                                                         │ RECENT EVENTS                        … ║
║                                                         │ Detailed logs are available in Logs v… ║
║                                                         │ 09:00:00 mission run started         … ║
║                                                         │ 09:00:05 Planning mission...         … ║
║                                                         │ 09:00:10 worker #1 started           … ║
╚══════════════════════════════════════════════════════════════════════════════════════════════════╝







Tab Next  Shift+Tab Prev  F/W/M/D/T View  P Pause  R Resume  Ctrl+G Steer  ↑↓/PgUp/PgDn Scroll      
melos> Running m1-f2...  (Ctrl+G steer)                                                             "
`;

exports[`ui/tui visual snapshots workers frame snapshot 1`] = `
"● Mission Control  テキスト統計ユーティリティの追加                                      Time 5m 42s
● RUNNING [███████████████░░░░░░░░░░░░░░░] 2/4 (50%) | WORKER m1-f2                                 
NOW RUNNING  WORKER #1  m1-f2  model=gpt-5.4  elapsed=1m 12s  LIVE  Lines 1-6/6
────────────────────────────────────────────────────────────────────────────────────────────────────
────────── LOG START: PLANNING ──────────
09:00:00 [PLAN_CREATED] milestones=2 features=4
────────── SWITCH: PLANNING -> WORKER ──────────
09:00:10 [EXPLORED] 1 file
  │ Read: parser.ts
09:00:11 [BASH] npm test -- parser


















Tab Next  Shift+Tab Prev  F/W/M/D/T View  ↑↓/PgUp/PgDn Scroll  Shift+↑ Oldest  Shift+↓ Latest  L Fo…
melos> Running m1-f2...  (Ctrl+G steer)                                                             "
`;
